// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`no-model card in the chat area (T5) providers 0/3: the card shows both paths and /provider 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────╮
│ NO MODEL 8gent needs a model to answer. Pick one, or type /provider.         │
│ 1  Run a model on this machine (free, stays local)                           │
│    curl -fsSL https://ollama.com/install.sh | sh                             │
│    ollama pull qwen3.5                                                       │
│    In 8gent: /provider ollama                                                │
│ 2  Use a free hosted model, key from https://openrouter.ai/keys              │
│    Add OPENROUTER_API_KEY=<your key> to ~/.8gent/.env                        │
│    Restart 8gent. In 8gent: /provider openrouter-free                        │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`no-model card in the chat area (T5) carries agent init's reason line in place of a chat notice 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────╮
│ NO MODEL 8gent needs a model to answer. Pick one, or type /provider.         │
│          LM Studio is not reachable.                                         │
│ 1  Run a model on this machine (free, stays local)                           │
│    curl -fsSL https://ollama.com/install.sh | sh                             │
│    ollama pull qwen3.5                                                       │
│    In 8gent: /provider ollama                                                │
│ 2  Use a free hosted model, key from https://openrouter.ai/keys              │
│    Add OPENROUTER_API_KEY=<your key> to ~/.8gent/.env                        │
│    Restart 8gent. In 8gent: /provider openrouter-free                        │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`no-model card in the chat area (T5) one provider ready: nothing renders 1`] = `""`;

exports[`no-model card in the chat area (T5) short terminal (80x24): compact form, three text rows, nothing wraps 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│ NO MODEL 8gent needs a model to answer. Pick one, or type /provider.     │
│ 1  Install Ollama (ollama.com), ollama pull qwen3.5, /provider ollama    │
│ 2  Put OPENROUTER_API_KEY in ~/.8gent/.env, restart, use /provider       │
╰──────────────────────────────────────────────────────────────────────────╯"
`;
